# soar

./: .gitignore  Cargo.toml  README.md
.cargo/: config
soar_cli/: Cargo.toml
soar_cli/src/: registry.rs  soar.rs
soar_cli/src/rest/: get.rs
soar_cli/tests/: ut_registry.rs
soar_rpc/: Cargo.toml
soar_sdk/: Cargo.toml
src/: flags.rs  registry.rs  soar.rs
src/rest/: distrib.rs  gov.rs  mod.rs
src/rpc/: registry.rs  tendermint_rpc.rs
